compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/namedFun.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
<!NON_MEMBER_FUNCTION_NO_BODY!>fun bar()<!>
